# panini

./: .env.example  .gitignore  CONTEXT.md  Cargo.toml  README.md  panini.service
data/: anga-rule.json  pratyaya-rule.json  sandhi-rule.json  sup-suffix.json  tin-suffix.json  tripadi-rule.json  verb-anga-rule.json  vikarana-rule.json
docs/: adding-conjugations.md  adding-stem-types.md  sutra-reference.md  verification-system.md
docs/adr/: 0001-engine-in-panini.md
docs/archived/: prd.md
examples/: iced-script-test.rs
src/: api.rs  config.rs  error.rs  lib.rs  main.rs  mcp.rs  rule_cache.rs  vidya_client.rs
src/engine/: conjugation.rs  consistency.rs  declension.rs  mod.rs  phoneme.rs  sandhi.rs  script.rs
src/gui/: conjugation.rs  mod.rs  paradigm.rs  sandhi.rs  sutra.rs  theme.rs  verify.rs
static/: index.html
tests/: integration.rs  properties.rs
