[package]
name = "panini"
version = "0.1.0"
edition = "2024"

[lib]
name = "panini"
path = "src/lib.rs"

[[bin]]
name = "panini"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-std", "io-util"] }
rmcp = { version = "1", features = ["server", "client", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server", "macros", "schemars"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["auth"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
